# MINIST_TO_CPP

./: .gitignore  CMakeLists.txt  README.md  convert_to_torchscript.py  create_test_image.py  data.py  eval.py  gui_app.py  main.py  model.py  requirements.txt  test_deployment.py  train.py  visualize.py
handwriting_recognizer/: CMakeLists.txt  README.md  drawingwidget.cpp  drawingwidget.h  handwriting_recognizer.pro  main.cpp  mainwindow.cpp  mainwindow.h  torchmodel.cpp  torchmodel.h
handwriting_recognizer_opencv/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BUILD_ISSUES.md  CMakeLists.txt  IMPROVEMENTS_AND_TRAINING.md  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  drawing_canvas.cpp  drawing_canvas.h  handwriting_recognizer_opencv.sln  handwriting_recognizer_opencv.vcxproj  handwriting_recognizer_opencv.vcxproj.filters  main.cpp  test_build.py  test_fixes.py  torch_model.cpp  torch_model.h
handwriting_recognizer_opencv/Release/: handwriting_recognizer_opencv.exp
handwriting_recognizer_opencv/handwriting_recognizer_opencv.dir/Release/: handwriting_recognizer_opencv.exe.recipe
handwriting_recognizer_opencv/handwriting_recognizer_opencv.dir/Release/handwrit.DE6521C4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
handwriting_recognizer_opencv/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
handwriting_recognizer_opencv/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
handwriting_recognizer_opencv/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
handwriting_recognizer_opencv/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp
